--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
     </div>
   </div>
 
-  <div class="container-fluid" style=" margin-bottom: 90px;">
-    <div class="row align-items-center">
-      <div class="col-auto" style="padding-left: 60px; padding-right: 30px; font-size: 50px; font-weight: bold; color: #114B8B;">Otros recursos</div>
-    <div class="col" style="padding-right: 60px;"><hr style="border: 2px solid #FAB248; opacity: 10;"></div>
+  <div class="container-fluid" style="padding-left: calc(20px + (40 - 20) * ((100vw - 300px) / (1920 - 300))); 
+  padding-right: calc(20px + (40 - 20) * ((100vw - 300px) / (1920 - 300)));margin-bottom: 90px;">
+    <div class="row align-items-end">
+      <div class="col-md-3" style="font-size: 50px; font-weight: bold; color: #114B8B;">Otros recursos</div>
+    <div class="col-md-9"><hr style="border: 2px solid #FAB248; opacity: 10;"></div>
     </div>
   </div>
   
@@ -69,7 +70,7 @@
   <div  class="card text-white" style="background-color: #ED231F; height: 200px;" >
     <div style="text-align: right; padding-top: 40px;"><img src="img/wikipedia.svg"  class="img-fluid"  alt="..." width="120" height="220" ></div>
     <div class="card-img-overlay">
-      <hr style="border: 2px solid #ffffff; margin-top: 120px; width: 120px; opacity: 10;">
+      <hr style="border: 2px solid #ffffff; margin-top: 120px; width: 120px;">
       <h5 class="card-title">Wikipedia</h5>
       
     </div>
