--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid" style="padding-left: calc(20px + (40 - 20) * ((100vw - 300px) / (1920 - 300))); 
-    padding-right: calc(20px + (40 - 20) * ((100vw - 300px) / (1920 - 300)));">
+    <div class="container-fluid" style="padding-left: calc(20px + (60 - 20) * ((100vw - 300px) / (1920 - 300))); 
+    padding-right: calc(20px + (60 - 20) * ((100vw - 300px) / (1920 - 300)));">
         <div class="row">
           <div class="col text-center">   
             <img src="img/BANNERoo.png" class="img-fluid" alt="...">
@@ -56,8 +56,8 @@
     </div>
   </div>
 
-  <div class="container-fluid" style="padding-left: calc(20px + (40 - 20) * ((100vw - 300px) / (1920 - 300))); 
-  padding-right: calc(20px + (40 - 20) * ((100vw - 300px) / (1920 - 300)));margin-bottom: 90px;">
+  <div class="container-fluid" style="padding-left: calc(20px + (60 - 20) * ((100vw - 300px) / (1920 - 300))); 
+  padding-right: calc(20px + (60 - 20) * ((100vw - 300px) / (1920 - 300)));margin-bottom: 90px;">
     <div class="row align-items-end">
       <div class="col-md-3" style="font-size: 50px; font-weight: bold; color: #114B8B;">Otros recursos</div>
     <div class="col-md-9"><hr style="border: 2px solid #FAB248; opacity: 10;"></div>
@@ -183,8 +183,9 @@
 </div>
 
 <div class="row justify-content-md-center align-items-center" style="margin-top: 40px; margin-bottom: 90px;">
-        <div class="col-md-2 col-sm-6"> 
-          <img src="img/Recurso 17.svg" class="img-fluid" alt="..." ></div>
+        <div class="col-md-2 col-sm-6 text-center"> 
+          <button type="button" class="btn btn-outline-warning" style="padding-right: 30px; padding-left: 30px; border-radius: 30px; border-width: 2px; color: #114B8B; font-weight: bold; font-size: 24px;">Ver más</button>
+          </div>
       </div>
     </div>
       
