--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>LABORATORIO DE INNOVACIÓN - HOME</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
