--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       </div>
       <div class="col-md-4" style="margin-bottom: 20px;">
-        <a href="http://192.168.0.200/phet_mul_all_2023-04/A/index.html" target="_blank">
+        <a href="http://192.168.0.200:8080/phet_mul_all_2023-04/A/index.html" target="_blank">
           <div class="card text-white" style="background-color: #FAB248; height: 200px;">
             <div style="text-align: right; padding-top: 40px;"><img src="img/fisica.svg" class="img-fluid" alt="..."
                 width="120" height="220"></div>
@@ -220,7 +220,7 @@
   </div> -->
   </div>
 
-  <div class="container-fluid"
+  <div class="container-fluid mt-5"
     style="background-color: beige; padding-left: 60px; padding-right: 60px; padding-top: 20px; padding-bottom: 20px;">
     <div class="row align-items-center justify-content-center">
 
