Fix social network

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     </div>
   </div> -->
-<!-- 
+  <!-- 
   <div class="row justify-content-md-center align-items-center" style="margin-top: 40px; margin-bottom: 90px;">
     <div class="col-md-2 col-sm-6 text-center">
       <button type="button" class="btn btn-outline-warning"
@@ -225,17 +225,24 @@
     <div class="row align-items-center justify-content-center">
 
       <div class="col-auto">
-        <img src="img/FACEBOOK.png" class="img-fluid ml-4" alt="..." width="32px" height="32px"
-          style="padding-right: 10px;">
-        <img src="img/INSTAGRAM.png" class="img-fluid ml-4" alt="..." width="32px" height="32px"
-          style="padding-right: 10px;">
-        <img src="img/LINKEDIN.png" class="img-fluid ml-4" alt="..." width="32px" height="32px"
-          style="padding-right: 10px;">
-        <img src="img/YOUTUBEE.png" class="img-fluid ml-4" alt="..." width="32px" height="32px"
-          style="padding-right: 10px;">
-
+        <a href="https://www.facebook.com/CompuParaEducar/" target="_blank" rel="noopener noreferrer">
+          <img src="img/FACEBOOK.png" class="img-fluid ml-4" alt="..." width="25px" height="25px"
+            style="padding-right: 10px;">
+        </a>
+        <a href="https://laboratoriosdeinnovacioneducativa.co/theme/moove/pix/footer/INSTAGRAM.png" target="_blank"
+          rel="noopener noreferrer">
+          <img src="img/INSTAGRAM.png" class="img-fluid ml-4" alt="..." width="32px" height="32px"
+            style="padding-right: 10px;">
+        </a>
+        <a href="https://www.linkedin.com/company/computadores-para-educar" target="_blank" rel="noopener noreferrer">
+          <img src="img/LINKEDIN.png" class="img-fluid ml-4" alt="..." width="32px" height="32px"
+            style="padding-right: 10px;">
+        </a>
+        <a href="https://www.youtube.com/channel/UCNWt0evZdJbmw4NqbYiPRnw" target="_blank" rel="noopener noreferrer">
+          <img src="img/YOUTUBEE.png" class="img-fluid ml-4" alt="..." width="38px" height="38px"
+            style="padding-right: 10px;">
+        </a>
       </div>
-
       <div class="col-auto">
 
         <img src="img/LOGOS CISP CPE.png" class="img-fluid" alt="..." style="max-width: 320px;">
