--- a/index.html
+++ b/index.html
@@ -251,13 +251,8 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <img src="img/FRANJA FOOTER.png" class="img-fluid" alt="...">
-      </div>
-    </div>
-  </div>
+  
+  <img src="img/franja.png"  width="100%">
 
 
 
