--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="card-body">
           <p class="card-title"
             style="font-size: 50px; font-weight: bold; color: #F29715; line-height: 52px; margin-bottom: 12px;">
-            Sincro<br>nizador</p>
+            Sincronizador</p>
           <a href="http://192.168.0.200/sync" target="_blank">
 
             <button type="button" class="btn btn-outline-warning"
